--- a/index.html
+++ b/index.html
@@ -13,44 +13,7 @@
     <meta property="og:description" content="Visit Taliparamba Sree Bhagavathi Temple- 800 years of spiritual heritage, daily poojas, festivals, and divine blessings in Kerala, India." />
     <meta property="og:type" content="website" />
 
-    <style>
-      #preloader {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 9999;
-        background: #ffffff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .loader {
-        width: 48px;
-        height: 48px;
-        border: 5px solid #f3f3f3;
-        border-top: 5px solid #ff8833;
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-      }
-
-      .fade-out {
-        opacity: 0;
-        visibility: hidden;
-        transition: opacity 0.5s ease-out, visibility 0.5s ease-out;
-      }
-
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
+    <style src="src/index.css"></style>
   </head>
 
   <body>
@@ -59,21 +22,7 @@
       <div class="loader"></div>
     </div>
 
-    <!-- React Root -->
     <div id="root"></div>
-
-    <!-- Redirect handler -->
-    <script>
-      (function () {
-        let redirect = sessionStorage.redirect;
-        delete sessionStorage.redirect;
-        if (redirect && redirect !== location.href) {
-          history.replaceState(null, null, redirect);
-        }
-      })();
-    </script>
-
-    <!-- Load React App first -->
     <script type="module" src="/src/main.tsx"></script>
 
     <!-- Fade-out after everything loads -->
